# delibird

./: .gitattributes  .gitignore  .pylintrc  .pypirc  README.md  commit.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/scripts/: release.py
.github/workflows/: publish.yml  release.yml
datasets/mock_data/mock_my/: mock_my.parquet
docs/: cn.md  database.md  guide.md
examples/: config.toml
src/delibird/: __init__.py  _version.py  cli.py  config.py  log.py  main.py  pm.py  server.py
src/delibird.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/delibird/cli/: parquet.py  workflow.py
src/delibird/client/: __init__.py  chat.py
src/delibird/context/: __init__.py  context.py  instance.py  registry.py
src/delibird/database/: __init__.py  check.py  connection.py  db.py  insert.py  mysql.py  schema.py
src/delibird/driver/: __init__.py  baichuan.py  base.py  chatglm.py  ernie.py  minimax.py  qwen.py  skylark.py  spark.py
src/delibird/execute/: __init__.py  concurrent.py  multiprocess.py  pool.py  single.py  worker.py
src/delibird/job/: __init__.py  base.py
src/delibird/mock/: __init__.py  arrow.py  datatype.py  date.py  decimal.py  gen.py  map.py  parser.py  schema.py  send.py  time.py
src/delibird/router/: __init__.py  baichuan.py  base.py  chatglm.py  common.py  ernie.py  gateway.py  minimax.py  openai.py  qwen.py  spark.py
src/delibird/stream/: __init__.py  base.py  wsstream.py
src/delibird/util/: __init__.py  decode.py  func.py  memory.py  pm.py
src/delibird/work/: mock.py  read.py  write.py
src/delibird/workflow/: __init__.py  job.py  plan.py  task.py  workflow.py
src/extract/: __init__.py
src/extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/extract/cli/: __init__.py  mock.py
src/extract/database/: connection.py  cursor.py  insert.py  schema.py
src/extract/mock/: arrow.py  code.py  time.py
src/extract/util/: __init__.py  show.py
src/extract/work/: __init__.py  mock.py
tests/: test_anyio.py  test_class.py  test_client.py  test_config.py  test_ernie.py  test_ping.py  test_qwen.py
tests/cli/: test_cli_file.py  test_cli_files.py  test_cli_read.py  test_cli_table.py  test_cli_write.py  test_cli_yaml.py
tests/database/: test_database.py  test_database_schema.py  test_fetch.py  test_insert.py  test_read.py  test_table_exist.py
tests/job/: test_context.py  test_job.py  test_task.py
tests/mock/: test_gen_parquet.py  test_gen_perf.py  test_gen_table.py  test_mock_file.py  test_mock_files.py  test_mock_table.py
tests/parquet/: test_arrow_meta.py  test_from_array.py  test_parquet_schema.py  test_query.py  test_read_dir.py  test_read_parquet.py  test_write_dir.py  test_write_parquet.py
tests/util/: test_memory.py
tests/workflow/: test_context.py  test_task.py
tests/yaml/: bigmock.yaml  mock_dir.yaml  mock_file_enormous.yaml  mock_file_read.yaml  mock_table.yaml  stock.yaml  test_load_yaml.py  test_yaml.py
tests/yamls/: dirmock.yaml  filemock.yaml  mock_dir_enormous.yaml  mock_file.yaml  mock_file_edge.yaml  mock_file_large.yaml  mock_table.yaml  tablemock.yaml  test_load_yaml.py  test_yaml.py  workflow.yaml  writedir.yaml  writefile.yaml
web/: package-lock.json
web/antd-demo/: package-lock.json  package.json
