# pyproject.toml

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 65",
    "wheel",
    'versioneer[toml]',
    'tomli; python_version < "3.11"',
]

[project]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "websocket-client==1.7.0",
    "click==8.1.7",
    "dashscope==1.14.1",
    "psutil==5.9.8",
]

description = 'LLM unified server'
name = 'delibird'
readme = "README.md"
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/EeroEternal/delibird/issues"
"Homepage" = "https://github.com/EeroEternal/delibird"

[project.scripts]
delibird = "delibird.cli:cli"

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/delibird/_version.py"
versionfile_build = "delibird/_version.py"
tag_prefix = ""
parentdir_prefix = "delibird-"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

authors = [{ name = "lipi", email = "lipicoder@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.isort]
profile = 'black'

[tool.pylint]
jobs = 2

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
exclude = '''
/(
    \.eggs
  | \.git
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
preview = true
